--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "pg": "^8.4.1",
+    "pokemon-font": "^1.8.1",
     "sequelize": "^6.3.5"
   }
 }
